--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "Unlincensed",
   "type": "module",
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
