--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/plugga-tech/express-api-webshop-js-nanidam#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "vite": "^4.2.1"
+  },
+  "dependencies": {
+    "axios": "^1.3.4"
   }
 }
